[package]
name = "VulkanRustAsh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
nalgebra = "0.33.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
winit = "0.30.10"
vulkanalia = { version = "=0.28.0", features = ["libloading", "provisional", "window"] }
thiserror = "2.0.12"
